# Pet-projects

./: README.md  git_settings.txt
Donut/: Donut.cpp  Donut.sln  Donut.vcxproj  Donut.vcxproj.filters
GDS-820S/: text.txt
Keithley/: text.txt
Kinescope--Video-Scraper/: config.py  main.py  undetected_chromedriver_put_to_packages_(__init__ fix).rar
Liba/: Liba.cpp  Liba.h  Liba.sln  Liba.vcxproj  Liba.vcxproj.filters  Test.cpp
Miner/: Miner.sln  Miner.vcxproj  Miner_last.cpp  main.cpp
Miner_1/: Miner.sln  main.cpp
Miner_backup/: Miner.vcxproj  main.cpp
Miner_last/: Miner_last.cpp  Miner_last.sln  Miner_last.vcxproj  Miner_last.vcxproj.filters
PacMan/: PacMan.sln  PacMan.vcxproj  Source.cpp
Racing_Simulator/RacingSimulator_CMake_VS/Libs/RacingLib/: CMakeLists.txt  Race.h
Racing_Simulator/RacingSimulator_CMake_VS/Libs/RacingLib/Race/: RaceAir.cpp  RaceAirGround.cpp  RaceAirGround.h  RaceGround.cpp
Racing_Simulator/RacingSimulator_CMake_VS/Libs/RacingLib/Transports/: TRANSPORT.cpp
Racing_Simulator/RacingSimulator_CMake_VS/Libs/RacingLib/Transports/Flying/: EAGLE.cpp  MAGIC_CARPET.cpp  MAGIC_CARPET.h
Racing_Simulator/RacingSimulator_CMake_VS/Libs/RacingLib/Transports/Ground/: ALL_TERRAIN_BOOTS.cpp  CAMEL.h  CENTAUR.h
Racing_Simulator/other_build_options/RacingSimulator_CMake_only/: CMakeLists.txt  RacingSimulator.cpp  RacingSimulator.h
Racing_Simulator/other_build_options/RacingSimulator_CMake_only/Libs/RacingLib/: Race.cpp
Racing_Simulator/other_build_options/RacingSimulator_CMake_only/Libs/RacingLib/Race/: RaceAir.cpp  RaceAir.h  RaceAirGround.cpp  RaceAirGround.h  RaceGround.cpp  RaceGround.h
Racing_Simulator/other_build_options/RacingSimulator_CMake_only/Libs/RacingLib/Transports/Flying/: AIR.cpp  BROOMSTICK.cpp  EAGLE.h
Racing_Simulator/other_build_options/RacingSimulator_CMake_only/Libs/RacingLib/Transports/Ground/: ALL_TERRAIN_BOOTS.h  CAMEL.cpp  GROUND.cpp  GROUND.h
Snake/: Snake.cpp  (+2 more)
(+156 files in other folders)
